Removed SqRt button and added a +/- button. Squashed bug where hitting an operator would cause an operation to run where the first and second variables were the same.  Squashed bug where trying to perform an operation with '-' as an operand would return a NaN error.

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@
     left: 10px;
 }
 
-#sqroot {
+#negSwitch {
     bottom: 330px;
     left: 100px;
 }
